--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
   "version": "0.0.0",
   "description": "Tart probing",
   "scripts": {
+    "ansible": "node examples/ansible.js",
     "inject-examples": "node scripts/injectExamples.js",
     "readme": "node examples/readme.js",
     "test": "node scripts/test.js"
   },
   "main": "index.js",
   "devDependencies": {
-    "nodeunit": "0.8.4"
+    "discover": "0.3.5",
+    "discover-tcp-transport": "4.0.0",
+    "nodeunit": "0.8.4",
+    "tart-ansible": "0.0.4",
+    "tart-transport-http": "0.1.0",
+    "tart-transport-udp": "0.1.0"
   },
   "dependencies": {
     "tart": "0.2.x"
